--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,11 @@ spring.redis.lettuce.shutdown-timeout=100ms
 #在启动时创建缓存名称，即前面的cacheNames，多个名称用逗号分隔。
 spring.cache.cache-names=c1,c2
 spring.cache.redis.time-to-live=8000
-
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/how2java?characterEncoding=UTF-8&useSSL=false&useAffectedRows=true
 spring.datasource.username=root
 spring.datasource.password=yrpyrp
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.rp.redisdemo.entity
+httpclient.socketTimeout=60
+httpclient.connectionTimeout=60
