全局异常处理（自定义异常）&& 工具类静态变量初始化赋值 && token过滤器校验 && 数据库备份 &&  如何在系统初始化时执行特定方法（initService） && 线程池配置实现异步 && yml转为properties && 系统初始化加载特定配置文件为bean(CommonFileConfig)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,13 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.rp.redisdemo.entity
 httpclient.socketTimeout=60
 httpclient.connectionTimeout=60
+check_token_exclude_uris=/test; 
+##工具类静态参数赋值
+util.ip=10.80.56.99
+util.port=80
+util.serviceName=Google
+util.serviceUrl=www.google.com
+jwt.expire-time=60000
+jwt.secret=131234rfaF3214asd3fsg5w6edwA
+##
+
